--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "image_uploader",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:obake-fe/image_uploader.git",
-  "author": "obake-fe <daichismash@gmail.com>",
-  "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack -w"
+  },
   "devDependencies": {
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
@@ -16,5 +14,6 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "private": true
 }
