--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/prettier": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -18,7 +19,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
+    "husky": "4.3.0",
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
     "ts-loader": "^9.2.6",
@@ -33,7 +34,8 @@
     "dotenv": "^10.0.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "husky": {
     "hooks": {
