--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/prettier": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "autoprefixer": "^10.4.0",
+    "css-loader": "^6.5.1",
     "eslint": "7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
@@ -21,7 +23,11 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "4.3.0",
     "lint-staged": "^12.1.4",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.8",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "webpack": "^5.65.0",
@@ -35,6 +41,7 @@
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-router-dom": "^6.2.1"
   },
   "husky": {
