--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "webpack serve"
   },
   "devDependencies": {
+    "@types/eslint": "7.29.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
