--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@types/react-dom": "^17.0.3",
     "dotenv": "^10.0.0",
     "firebase": "^9.6.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
